# macro

./: .gitignore  CMakeLists.txt  cli.py  macro.c  macro.h  readme.md
.github/: FUNDING.yml
.github/workflows/: main.yml
benchmarks/: benchmarks_builder.py  benchmarks_generator.py
bindings/python/: Makefile  readme.md  setup.py  uninstall.sh
bindings/python/macro/: __init__.py  api.py  py_macro.c
cmake/: FindLibcheck.cmake  install_libcheck.sh
docs/: arguments.md  index.md  setup.md
features/: 1.txt  2.txt
src/: CMakeLists.txt  macro.c  macro.h
tests/: CMakeLists.txt  api_test.c  api_test.py
